<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="no_history">No input history</string>
    <string name="no_notifications">No notifications</string>
    <string name="ignore">Ignore</string>
    <string name="favorite">Favorite</string>
    <string name="open">Open</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="launching">Launching...</string>
    <string name="status">Status</string>
    <string name="no_messages">No messages...</string>
    <string name="not_connected">Not connected...</string>
    <string name="exit">Quit</string>
    <string name="server_details">Server Details</string>
    <string name="add_server">Add Server</string>
    <string name="save_server">Save</string>
    <string name="cancel_server">Cancel</string>
    <string name="server_nick_retry">
        Your nickname is unavailable, trying alternate.
    </string>
    <string name="input_placeholder">Type here</string>
    <string name="server_nick_error">
        Your nicknames are all unavailable, aborting.
    </string>

    <string name="server_none">No servers configured</string>
    <string name="server_not_selected">No server selected</string>
    <string name="server_incomplete">
        Not all required server fields have been filled</string>
    <string name="server_connecting">Connecting...</string>
    <string name="server_connected">Connected</string>
    <string name="server_disconnected">Disconnected</string>
    <string name="server_connect">Connect</string>
    <string name="server_reconnect">Reconnect</string>
    <string name="server_disconnect">Disconnect</string>
    <string name="server_delete">Delete server</string>
    <string name="server_options">Edit server</string>
    <string name="server_messages">Server messages</string>
    <string name="server_confirm_delete">Delete server?</string>
    <string name="server_confirm_delete_message">
        Are you sure you want to permanently remove %s?</string>

    <string name="ssl_expired">Your SSL certificate has expired</string>
    <string name="sha1_fingerprint">SHA1 Fingerprint: </string>
    <string name="md5_fingerprint">MD5 Fingerprint: </string>

    <string name="version">qicr for android: %s</string>
    <string name="quit_confirm_title">Exit?</string>
    <string name="quit_confirm">
        You are still connected, are you sure you would like to quit?</string>

    <string name="send_message">Send Message</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="users_count">Users: %d</string>
    <string name="nick_insert">Insert name</string>
    <string name="nick_start_chat">Start chat</string>
    <string name="speech_unsupported">
        Speech recognition is not supported on this device</string>
    <string name="speech_failed">Your speech could not be recognized</string>
    <string name="speech_cancel">Cancel</string>
    <string name="speech_select">Select message</string>
    <string name="tab_servers">Servers</string>
    <string name="notif_mention_template" formatted="false">%1: %2</string>
    <string name="notif_running">running...</string>
    <string name="notif_connected_servers">Connected servers: %d</string>
    <string name="notif_disconnected_servers">Disconnected servers: %d</string>
    <string name="notif_unread_messages">Unread messages: %d</string>
    <string name="notif_unread_private_messages">Unread private messages: %d</string>
    <string name="notif_title">qicr</string>
    <string name="notif_server_disconnected">Server disconnected: %s</string>
    <string name="channel_names">Names list</string>
    <string name="channel_leave">Leave</string>
    <string name="server_close">Close server messages</string>
    <string name="channel_close">Close channel</string>
    <string name="channel_close_confirm_title">Close tab?</string>
    <string name="channel_close_confirm">
        Are you sure you would like to close and leave this channel?</string>
    <string name="query_close">Close query</string>
    <string name="query_close_confirm_title">Close tab?</string>
    <string name="query_close_confirm">
        Are you sure you would like to close and leave this query?</string>

    <string name="usage_unignore">Usage: /unignore &lt;nicks...&gt;</string>
    <string name="usage_raw">Usage: /raw &lt;raw command&gt;</string>
    <string name="usage_nick">Usage: /nick &lt;nick&gt;</string>
    <string name="usage_join">Usage: /join &lt;channel&gt; [password]</string>
    <string name="usage_msg">Usage: /msg &lt;new nick&gt; [message]</string>
    <string name="usage_notice">Usage: /notice &lt;nick&gt; [message]</string>
    <string name="usage_ping">
        Usage /ping &lt;nick/channel&gt;</string>
    <string name="usage_ctcp">
        Usage /ctcp &lt;nick/channel&gt; &lt;command&gt; [args]</string>

    <string name="query_template" formatted="false">
       *** Starting chat with %1</string>
    <string name="message_template" formatted="false">
        &lt;%1&gt; %2</string>
    <string name="notice_template" formatted="false">-%1- %2</string>
    <string name="action_template" formatted="false"> * %1 %2</string>
    <string name="ctcp_response_template_3" formatted="false">
        CTCP %1 reply from %2: %3</string>
    <string name="ctcp_response_template_2" formatted="false">CTCP %1 reply from %2</string>
    <string name="ctcp_response_template_s_3" formatted="false">
        [%4] CTCP %1 reply from %2: %3</string>
    <string name="ctcp_response_template_s_2" formatted="false">
        [%3] CTCP %1 reply from %2</string>

    <string name="ctcp_request_template_s" formatted="false">
        [%4] [ctcp(%1)] %2 %3</string>
    <string name="ctcp_request_template" formatted="false">
        [ctcp(%1)] %2 %3</string>

    <string name="nick_change_template" formatted="false">
        -!- %1 is now known as %2</string>
    <string name="join_template" formatted="false">
        -!- %1 [%2] has joined</string>
    <string name="quit_template" formatted="false">
        -!- %1 [%2] has quit [%3]</string>
    <string name="part_template" formatted="false">
        -!- %1 [%2] has left [%3]</string>
    <string name="kick_template" formatted="false">
        -!- %1 was kicked by %2 [%3]</string>

    <string name="topic_template_1" formatted="false">
        *** Topic for %1: %2</string>
    <string name="topic_template_2" formatted="false">
        *** %1 changed the topic of %2 to: %3</string>

    <string name="ignore_remove_prefix">Unignoring: %s</string>
    <string name="ignore_add_prefix">Ignoring: %s</string>
    <string name="ignore_list_prefix">Ignored:\n%s</string>
    <string name="error_ignores_empty">Ignore list empty</string>
    <string name="error_no_channel">
        You are not on a channel or query, try /help</string>
    <string name="error_server_disconnected">You are not connected</string>
    <string name="error_channel_disconnected">
        You are not currently on this channel</string>
    <string name="error_command_unknown">%s: command unknown, see /help</string>
    <string name="error_join_unknown">Unknown JOIN error</string>
    <string name="command_help_1">help</string>
    <string name="command_help_2">h</string>
    <string name="command_join_1">join</string>
    <string name="command_join_2">j</string>
    <string name="command_leave_1">leave</string>
    <string name="command_leave_2">part</string>
    <string name="command_quit">quit</string>
    <string name="command_ping">ping</string>
    <string name="command_topic">topic</string>
    <string name="command_quote">quote</string>
    <string name="command_notice">notice</string>
    <string name="command_msg_1">msg</string>
    <string name="command_msg_2">m</string>
    <string name="command_invite">invite</string>
    <string name="command_action_1">action</string>
    <string name="command_action_2">me</string>
    <string name="command_whowas">whowas</string>
    <string name="command_whois_1">whois</string>
    <string name="command_whois_2">wi</string>
    <string name="command_ignore">ignore</string>
    <string name="command_unignore">unignore</string>
    <string name="command_nick">nick</string>
    <string name="command_ctcp">ctcp</string>
    <string name="command_kick_1">kick</string>
    <string name="command_kick_2">k</string>
    <string name="command_raw">raw</string>
    <string name="command_clear">clear</string>

    <string name="settings">Settings</string>
    <string name="toggle_theme">Day/Night mode</string>
    <string name="toggle_rotate_lock">Lock rotation</string>
    <string name="toggle_rotate_unlock">Unlock rotation</string>

    <string name="help_text">
      available commands:\n
      /action /me\n
      /clear\n
      /ctcp\n
      /h /help\n
      /ignore\n
      /j /join\n
      /leave\n
      /m /msg\n
      /nick\n
      /notice\n
        /part\n
      /ping\n
      /raw\n
      /quit\n
      / /quote\n
      /topic\n
      /unignore\n
    </string>
    <string name="help_text_complete_TODO">
      available commands:\n
      /action /me\n
      /clear\n
      /ctcp\n
      /h /help\n
      /ignore\n
      /j /join\n
      /k /kick\n
      /m /msg\n
      /nick\n
      /notice\n
      /ping\n
      /raw\n
      /quit\n
      / /quote\n
      /topic\n
      /invite\n
      /wi /whois\n
      /whowas\n
    </string>
    <string name="app_name">qicr</string>
</resources>
