<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:qicr="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/toggle_theme"
        android:icon="?qicrThemeIcon"
        qicr:showAsAction="never"
        android:menuCategory="container"
        android:orderInCategory="96"
        android:title="@string/toggle_theme"/>
    <item android:id="@+id/toggle_rotate_lock"
        android:icon="?qicrLockRotationIcon"
        android:checkable="true"
        qicr:showAsAction="never"
        android:menuCategory="container"
        android:orderInCategory="97"
        android:title="@string/toggle_rotate_lock"/>
    <item android:id="@+id/settings"
        android:icon="?qicrSettingsIcon"
        qicr:showAsAction="never"
        android:menuCategory="container"
        android:orderInCategory="98"
        android:title="@string/settings"/>
    <item android:id="@+id/exit"
        android:icon="?qicrCloseIcon"
        qicr:showAsAction="never"
        android:menuCategory="container"
        android:orderInCategory="99"
        android:title="@string/exit"/>
</menu>
