<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:qicr="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/nick_whois"
          qicr:showAsAction="ifRoom|withText"
          android:icon="?qicrInfoIcon"
          android:title="@string/command_whois_1"/>
    <item android:id="@+id/channel_log"
          qicr:showAsAction="ifRoom"
          android:icon="?qicrHistoryIcon"
          android:title="Nick Log" />
    <item android:id="@+id/nick_start_chat"
          qicr:showAsAction="ifRoom|withText"
          android:icon="?qicrChatStartIcon"
          android:title="@string/nick_start_chat"/>
    <item android:id="@+id/nick_ignore"
          qicr:showAsAction="ifRoom|withText"
          android:checkable="true"
          android:checked="true"
          android:icon="?qicrChatEndIcon"
          android:title="@string/ignore"/>
</menu>
